# mini_split

./: .gitignore  Makefile  README.md  manage.py  pyproject.toml
app/: models.py
app/api/: serializers.py  urls.py  views.py
app/migrations/: 0001_initial.py
app/services/: split_calculator.py
app/tests/: conftest.py  test_payments.py
config/: settings.py  urls.py
